# mi-primer-repo

./: README.md  docker-compose.yml
FastAPI/: Dockerfile  main.py  pyproject.toml
api/: Dockerfile  main.py  pyproject.toml
jupyter-lab-custom/: Dockerfile  pyproject.toml  train_penguins.ipynb
jupyter-lab-custom/.ipynb_checkpoints/: train_penguins-checkpoint.ipynb
jupyterlab/: Dockerfile  Modelo_ML.ipynb  pyproject.toml
