[project]
name = "penguin_api"
version = "0.1.0"
description = "Penguin Classifier API using FastAPI and UV"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pandas",
    "numpy",
    "scikit-learn",
    "joblib"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]



