[project]
name = "jupyter_lab_env"
version = "0.1.0"
description = "JupyterLab environment with UV"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "joblib"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]



